examples/test/testpolicy2121.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2121
  namespace: namespace294
spec:
  podSelector:
    matchLabels:
      key13: value48
      key19: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value33
          key49: value26
      podSelector:
        matchLabels:
          key42: value47
          key6: value8
